# cv_evaluation_using_CrewAI

./: README.md  cv-evaluator.py  pyproject.toml
