[project]
name = "cv-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "docling>=2.41.0",
    "fastapi>=0.116.1",
    "google-genai>=1.25.0",
    "ipykernel>=6.30.0",
    "paho-mqtt>=2.1.0",
    "pymongo>=4.13.2",
    "tiktoken>=0.9.0",
    "uvicorn>=0.35.0",
]
